# Looker

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/FileView/: DragDropRow.tsx  DroppableRow.tsx  createFileViewTable.ts  index.tsx
src/types/: directives.d.ts
