[package]
name = "file_browser"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "global-shortcut-all", "shell-open", "shell-execute", "shell-sidecar", "path-all", "fs-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
mimty = "0.3.0"
chrono = "0.4.38"
dirs = "5.0.1"
rust_search = "2.0.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
